<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.sae_akgec.www.innovacion18.Home"
    android:background="@drawable/aaaa"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </android.support.design.widget.AppBarLayout>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="232dp"
        android:layout_height="229dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.291"
        app:srcCompat="@drawable/connect" android:contentDescription="@string/todo9" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="207dp"
        android:layout_height="135dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/todo13"
        android:elevation="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        app:srcCompat="@drawable/led" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="207dp"
        android:layout_height="135dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        app:srcCompat="@drawable/bot" android:contentDescription="@string/todo12" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="207dp"
        android:layout_height="135dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/developer" android:contentDescription="@string/todo11" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="207dp"
        android:layout_height="135dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/todo10"
        android:elevation="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/club" />



</android.support.constraint.ConstraintLayout>
