<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.sae_akgec.www.innovacion18.BOT"
    android:background="@drawable/aaaa"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/bot_left"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/right" />

    <ImageButton
        android:id="@+id/bot_right"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/left"/>

    <ImageView
        android:id="@+id/dummy"
        android:layout_width="145dp"
        android:layout_height="148dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo4"
        android:scaleType="fitCenter"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/robot"/>

    <ImageButton
        android:id="@+id/bot_up"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        app:srcCompat="@drawable/up" android:contentDescription="@string/todo2" />

    <ImageButton
        android:id="@+id/bot_down"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/todo3"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801"
        app:srcCompat="@drawable/down" />



</android.support.constraint.ConstraintLayout>

